--- a/index.html
+++ b/index.html
@@ -1,30 +1,8 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<title>Chris Porras, Computational Biologist</title>
-				<!-- link to main stylesheet -->
-		<link rel="stylesheet" type="text/css" href="/css/main.css">
-	</head>
-	<body>
-		<nav>
-    		<ul>
-        		<li><a href="/">Home</a></li>
-	        	<li><a href="/about">About</a></li>
-        		<li><a href="/cv">CV</a></li>
-        		<li><a href="/blog">Blog</a></li>
-    		</ul>
-		</nav>
-		<div class="container">
-    		<div class="blurb">
-        		<h1>Hi there, I'm Chris Porras!</h1>
-				<p>I'm an undergraduate at the University of Chicago <em> majoring in Quantitative Biology. </em> An aspiring technologist. <a href="/about">Read more...</a></p>
-    		</div><!-- /.blurb -->
-		</div><!-- /.container -->
-		<footer>
-    		<ul>
-        		<li><a href="mailto:chrisporras1@gmail.com">email</a></li>
-        		<li><a href="https://github.com/chrisporras">github.com/chrisporras</a></li>
-			</ul>
-		</footer>
-	</body>
-</html>
+---
+layout: default
+title: Chris Porras, Computational Biologist
+---
+<div class="blurb">
+	<h1>Hi there, I'm Chris Porras!</h1>
+		<p>I'm an undergraduate at the University of Chicago <em> majoring in Quantitative Biology. </em> An aspiring technologist. <a href="/about">Read more...</a></p>
+</div><!-- /.blurb -->
