--- a/index.html
+++ b/index.html
@@ -4,5 +4,5 @@ title: Chris Porras, Computational Biologist
 ---
 <div class="blurb">
 	<h1>Hi there, I'm Chris Porras!</h1>
-		<p>I'm an undergraduate at the University of Chicago <em> majoring in Quantitative Biology. </em> An aspiring technologist. <a href="/about">Read more...</a></p>
+		<p>I'm an undergraduate at the University of Chicago majoring in Quantitative Biology. <a href="/about">Read more</a></p>
 </div><!-- /.blurb -->
