--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
 <body>
 
-<ht>Welcome!</h1>
+<h1>Welcome!</h1>
+  <h2>This site is UNDER CONSTRUCTION.</h2>
 <p><a href="projects/cporras_final_project.html">
 Check out my final project modeling 
 infectious disease dynamics with social distancing!
